<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RequestAdminFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:textSize="20sp"
            android:text="@string/category" />

        <TextView
            android:id="@+id/textViewRequestAdminCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:letterSpacing="0.05"
            android:text="Fire"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:text="@string/message"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewRequestAdminMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:letterSpacing="0.05"
            android:text="Fire in Unipi"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:textSize="20sp"
            android:text="@string/created" />

        <TextView
            android:id="@+id/textViewRequestAdminCreatedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:letterSpacing="0.05"
            android:text="29/01/2024"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:textSize="20sp"
            android:text="@string/coordinates" />

        <TextView
            android:id="@+id/textViewRequestAdminCoordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:letterSpacing="0.05"
            android:text="37.98363, 35.23433"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:textSize="20sp"
            android:text="@string/approved" />

        <TextView
            android:id="@+id/textViewRequestAdminApproved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:letterSpacing="0.05"
            android:text="False"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:textSize="20sp"
            android:text="@string/similar_requests" />

        <TextView
            android:id="@+id/textViewRequestAdminSimilarRequests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:letterSpacing="0.05"
            android:text="37"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/approveBtn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/approve" />

            <Button
                android:id="@+id/declineBtn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decline" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>