<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RequestUserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:textSize="20sp"
            android:text="@string/category" />

        <TextView
            android:id="@+id/textViewRequestUserCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:letterSpacing="0.05"
            android:text="Fire"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:textSize="20sp"
            android:text="@string/message" />

        <TextView
            android:id="@+id/textViewRequestUserMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:letterSpacing="0.05"
            android:text="Fire in Unipi"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:textSize="20sp"
            android:text="@string/created" />

        <TextView
            android:id="@+id/textViewRequestUserCreatedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:letterSpacing="0.05"
            android:text="29/01/2024"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:textSize="20sp"
            android:text="@string/coordinates" />

        <TextView
            android:id="@+id/textViewRequestUserCoordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:letterSpacing="0.05"
            android:text="37.98363, 35.23433"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:textSize="20sp"
            android:text="@string/approved" />

        <TextView
            android:id="@+id/textViewRequestUserApproved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:letterSpacing="0.05"
            android:text="False"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:textSize="20sp"
            android:text="@string/similar_requests" />

        <TextView
            android:id="@+id/textViewRequestUserSimilarRequests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:letterSpacing="0.05"
            android:text="37"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>