<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:letterSpacing="0.05"
                android:text="@string/profile"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:letterSpacing="0.05"
                android:text="@string/firstname"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewProfileFirstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:letterSpacing="0.05"
                android:text="Tony"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:letterSpacing="0.05"
                android:text="@string/lastname"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewProfileLastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:letterSpacing="0.05"
                android:text="Kristaki"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:letterSpacing="0.05"
                android:text="@string/email"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewProfileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:letterSpacing="0.05"
                android:text="tonykristaki@gmail.com"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/logoutBtn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/logout" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
