<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DangerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:textSize="20sp"
            android:text="@string/category" />

        <TextView
            android:id="@+id/textViewDangerCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:letterSpacing="0.05"
            android:text="Fire"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:textSize="20sp"
            android:text="@string/protection" />

        <TextView
            android:id="@+id/textViewDangerProtection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:letterSpacing="0.05"
            android:text="Go close to water"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:textSize="20sp"
            android:text="@string/created" />

        <TextView
            android:id="@+id/textViewDangerCreatedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:letterSpacing="0.05"
            android:text="29/01/2024"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:textSize="20sp"
            android:text="@string/requests" />

        <TextView
            android:id="@+id/textViewDangerNoOfRequests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:letterSpacing="0.05"
            android:text="35"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>